update 0.98a-RC5